--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
-  "author": "Marcelo",
+  "author": "Marcelo Antunes Fernandes",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
