--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
+  "prisma": {
+    "schema": "data/prisma/schema.prisma"
+  },
   "author": "Marcelo Antunes Fernandes",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.4.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
