--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,4 @@
 SERVER_HOST=localhost
 SERVER_PORT=4242
 DATABASE_URL="postgres://postgres:superuser@localhost:5432/AW-P-EXEMPLO-1778"
+JWT_SECRET=sdfksADDFGMLKCZdjfl34ksdfdb323
