--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Educational project",
   "main": "server.js",
   "scripts": {
+    "postinstall": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
     "build": "node server.js"
